@@ -8,6 +8,7 @@ Bug fixes:
 - PR#4380: ocamlbuild should not use tput on windows
 - PR#4552: ocamlbuild does not create symlinks when using '.itarget' file
 - PR#4673, PR#5144: camlp4 fails on object copy syntax
+- PR#4732: camlp4 rejects polymorphic variants using keywords from macros
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
 - PR#4820: revised syntax pretty printer crashes with 'Stack_overflow'
 - PR#4928: wrong printing of classes and class types by camlp4
